<resources>
    <string name="app_name">GiftToMeApp</string>

    <!--  credenziali Twitter API -->
    <string name="CONSUMER_KEY" translatable="false">TtsXVZJUyIuAQOTMb9CoO4XlJ</string>
    <string name="CONSUMER_SECRET" translatable="false">snlA9gKVu4YwyPpXDHfkJc17ai7WxBsfBLFMybkhgWyvaj3PiV</string>

    <!--  FCM Server Key  -->
    <string name="FCM_Server_Key" translatable="false">AAAAU8t-klw:APA91bEC9DUa-MkumJ75_nlcsA3jIVfe2vZoM13grj4LJpVOsqQwkbeYXgC7QywntBpj4val5Mk9wPfMkSEmq-rSt8iAo9tbn-A7dqeqSYV4c9h14ymCqCBEBVheqxepADJb_zPKk-O9</string>

    <!--  user sharedPreferences  -->
    <string name="shared_preferences_user_name" translatable="false">userName</string>
    <string name="shared_preferences_token" translatable="false">token</string>
    <string name="shared_preferences_token_secret" translatable="false">tokenSecret</string>
    <string name="shared_preferences_user_id" translatable="false">userId</string>
    <!--  sharedPreferences Notification info  -->
    <string name="fcm_pref_name" translatable="false">FCMTokenPref</string>
    <string name="fcm_token" translatable="false">FCMToken</string>

    <!--  user string  -->
    <string name="user_gift_parsing_name" translatable="false">name</string>
    <string name="user_gift_parsing_category" translatable="false">category</string>
    <string name="user_gift_parsing_description" translatable="false">description</string>
    <string name="user_gift_parsing_lat" translatable="false">lat</string>
    <string name="user_gift_parsing_lon" translatable="false">lon</string>

    <!--  strings for JSON  -->
    <string name="json_id" translatable="false">id</string>
    <string name="json_text" translatable="false">text</string>
    <string name="json_full_text" translatable="false">full_text</string>
    <string name="json_sender" translatable="false">sender</string>
    <string name="json_receiver" translatable="false">receiver</string>
    <string name="json_message" translatable="false">message</string>
    <string name="json_statuses" translatable="false">statuses</string>
    <string name="json_hashtags" translatable="false">hashtags</string>
    <string name="json_entities" translatable="false">entities</string>
    <string name="json_issuer" translatable="false">issuer</string>
    <string name="json_target" translatable="false">target</string>
    <string name="json_errors" translatable="false">errors</string>
    <string name="json_code" translatable="false">code</string>
    <string name="json_in_reply_to_status_id" translatable="false">in_reply_to_status_id</string>
    <string name="json_profile_image_url_https" translatable="false">profile_image_url_https</string>
    <string name="json_profile_image_normal" translatable="false">_normal</string>
    <string name="json_profile_banner_url" translatable="false">profile_banner_url</string>

    <!--  fragment tags  -->
    <string name="home_fragment_tag" translatable="false">HomeFragment</string>
    <string name="users_tweets_fragment_tag" translatable="false">UserTweetsFragment</string>
    <string name="newgift_fragment_tag" translatable="false">NewGiftFragment</string>
    <string name="chat_fragment_tag" translatable="false">ChatFragment</string>
    <string name="profile_fragment_tag" translatable="false">ProfileFragment</string>
    <string name="mygift_fragment_tag" translatable="false">MyGiftFragment</string>
    <string name="settings_fragment_tag" translatable="false">SettingsFragment</string>
    <string name="reply_chat_fragment_tag" translatable="false">ReplyChatFragment</string>
    <string name="myreply_fragment_tag" translatable="false">MyReplyFragment</string>

    <string name="double_tap_to_exit_message">Press back button again to exit</string>

    <!--  notification  -->
    <string name="not_title" translatable="false">title</string>
    <string name="not_body" translatable="false">body</string>
    <string name="not_data" translatable="false">data</string>
    <string name="not_to" translatable="false">to</string>
    <string name="not_priority" translatable="false">priority</string>
    <string name="not_priority_value" translatable="false">high</string>
    <!--  reply notification  -->
    <string name="reply_notification_title">Reply received</string>
    <string name="reply_notification_text">You have received an answer from %1$s for the article %2$s</string>
    <!--  Geofence notification  -->
    <string name="gift_nearby">Gift in the area</string>
    <string name="descr_gift_nearby">There is a gift in your area</string>

    <!--  raggio (in metri)  -->
    <string-array name="radius_search">
        <item>100</item>
        <item>300</item>
        <item>500</item>
        <item>1000</item>
    </string-array>

    <!--  String to translate  -->

    <!--  chat_fragment  -->
    <string name="search_chat_reply">Look for a gift in "Your Answers"</string>
    <string name="search_chat_mygift">Look for a gift in "Your Gifts"</string>
    <string name="your_answers">Your Answers</string>
    <string name="yours_gifts">Your Gifts</string>

    <string name="same_name">You already have a gift with this name, change it</string>
    <string name="no_chat">You have no chat</string>

    <!--  delete_mygift_dialog  -->
    <string name="sure">Are you sure you want to delete the gift?</string>
    <string name="sure_reply">Are you sure you want to delete the reply?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!--  edit_mygift_dialog  -->
    <string name="edit_title">Edit the Gift</string>
    <string name="edit_name">Name</string>
    <string name="edit_description">Description</string>
    <string name="edit_address">Address (Street, House Number, City)</string>
    <!--  category  -->
    <string name="sport" translatable="false">Sport</string>
    <string name="electronics" translatable="false">Electronics</string>
    <string name="clothing" translatable="false">Clothing</string>
    <string name="music" translatable="false">Music&amp;Books</string>
    <string name="other" translatable="false">Other</string>
    <string name="dismiss">Cancel</string>
    <string name="edit">Edit</string>

    <!--  gift_error_animation, gift_upload_animation  -->
    <string name="wrong">Something went wrong, Try Again!!!</string>
    <string name="ok">Gift Added Successfully!!!</string>

    <!--  home_fragment  -->
    <string name="insert_position">Enter a location</string>

    <string name="close_popup">Touch to close or</string>
    <string name="correct_position">Please enter a valid location</string>
    <string name="no_gps_location">You have not activated the GPS, enter a location</string>
    <string name="chat_exist">A chat for this gift already exists, check the Chat section</string>

    <!--  new_gift_fragment  -->
    <string name="new_gift_title">New Gift</string>
    <string name="add">Add Gift</string>

    <string name="long_descr">Enter a description of up to 90 characters</string>
    <string name="check_categ">Check a category</string>

    <!--  onlongclick_card_mygift  -->
    <string name="descr">Description:</string>
    <string name="addr">Address:</string>

    <!--  profile_fragment2  -->
    <string name="start">To get the items you are interested in or post new ones:</string>
    <string name="my_gift">My Gifts</string>
    <string name="my_reply">My Reply</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="my_reply_title">Edit Reply</string>

    <string name="log_out">Logged out!</string>

    <!--  recap_newgift_dialog  -->
    <string name="summ">Summary</string>

    <!--  reply_chat_fragment  -->
    <string name="write">Write a message</string>

    <!--  reply_gift_dialog  -->
    <string name="contact">Contact %1$s</string>
    <string name="ans">Answer</string>
    <string name="send">Send</string>

    <!--  settings_fragment  -->
    <string name="radius">Search Radius</string>
    <string name="map">Map Color</string>
    <string name="dark">Dark Mode</string>

    <!--  users_tweets_fragment  -->
    <string name="gps_on">Activate the GPS by pressing the button on the side</string>
    <string name="no_obj">There are no items for this category</string>

    <!--  CustomInfoWindow, PopupAdapter  -->
    <string name="login_first">To contact a user you must first log in</string>
    <string name="empty_answer">Enter an answer</string>
    <string name="contact_for">Contact %1$s for the gift %2$s</string>

    <!--  MyGiftAdapter  -->
    <string name="all_fields">Enter all fields</string>
    <string name="valid_address">Enter valid address</string>

    <!--  MainActivity  -->
    <string name="need_login_newg">You must log in to add a gift, go to the Account section!</string>
    <string name="need_login_chat">You must log in to enter this section, go to the Account section!</string>

    <!--  menu  -->
    <string name="home_menu">Home</string>
    <string name="new_gift_menu">New Gift</string>
    <string name="chat_menu">Chat</string>
    <string name="account_menu">Account</string>

    <!--  GPS  -->
    <string name="title_gps">Activate the position</string>
    <string name="descr_gps">You have to activate the location</string>
    <string name="descr_high">The position must be in high mode</string>
    <string name="other2">other</string>
    <string name="ook">OK</string>


    <string name="already">Receiver already answer you, you cannot edit</string>

</resources>