<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_card_mygift">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_title"
            android:textColor="@color/colorChipSelected"
            android:gravity="center"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">


                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/edit_name"
                    android:textColor="@color/textWhite"
                    android:textColorHint="@color/textWhite"
                    android:backgroundTint="@color/textWhite"/>

                <EditText
                    android:id="@+id/descr_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/edit_description"
                    android:textColor="@color/textWhite"
                    android:textColorHint="@color/textWhite"
                    android:backgroundTint="@color/textWhite"/>

                <EditText
                    android:id="@+id/addr_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/edit_address"
                    android:textColor="@color/textWhite"
                    android:textColorHint="@color/textWhite"
                    android:backgroundTint="@color/textWhite"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/myRadioGroup"
                    android:orientation="vertical"
                    android:checkedButton="@+id/sportRadio">


                    <RadioButton
                        android:id="@+id/sportRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sport"
                        android:textColor="@color/textWhite"/>

                    <RadioButton
                        android:id="@+id/electronicsRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/electronics"
                        android:textColor="@color/textWhite"/>

                    <RadioButton
                        android:id="@+id/clothingRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/clothing"
                        android:textColor="@color/textWhite"/>

                    <RadioButton
                        android:id="@+id/musicRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/music"
                        android:textColor="@color/textWhite"/>

                    <RadioButton
                        android:id="@+id/otherRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textColor="@color/textWhite"/>


                </RadioGroup>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dismiss"/>

            <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textColor="@color/textWhite"
                android:backgroundTint="@color/colorChipSelected"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>



