<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_card_mygift">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_reply_title"
            android:textColor="@color/colorChipSelected"
            android:gravity="center"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reply_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/edit_name"
                android:textColor="@color/textWhite"
                android:textColorHint="@color/textWhite"
                android:backgroundTint="@color/textWhite"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/cancel_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dismiss"/>

            <Button
                android:id="@+id/edit_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit"
                android:textColor="@color/textWhite"
                android:backgroundTint="@color/colorChipSelected"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>



