<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:chipcloud="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_gravity="center">

    <ScrollView
        android:id="@+id/scrollNewGift"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="56dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:background="@drawable/round_corner_profile">


        <LinearLayout
            android:id="@+id/linear_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_gift_title"
                android:textColor="@color/colorChipSelected"
                android:gravity="center"
                android:textSize="30sp"
                android:padding="4dp"/>


            <EditText
                android:id="@+id/name_gift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:hint="@string/edit_name"
                android:textColor="@color/colorChipSelected"
                android:textColorHint="@color/colorChipSelected"
                android:backgroundTint="@color/colorChipSelected"/>

            <EditText
                android:id="@+id/descr_gift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:fontFamily="sans-serif"
                android:hint="@string/edit_description"
                android:textColor="@color/colorChipSelected"
                android:textColorHint="@color/colorChipSelected"
                android:backgroundTint="@color/colorChipSelected"/>

            <EditText
                android:id="@+id/addr_gift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/edit_address"
                android:textColor="@color/colorChipSelected"
                android:textColorHint="@color/colorChipSelected"
                android:backgroundTint="@color/colorChipSelected"/>


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_new_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleLine="false"
                app:singleSelection="true"
                app:selectionRequired="true">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sport_chip_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sport"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:chipBackgroundColor="@color/colorPrimary"
                        app:chipIcon="@drawable/sport"
                        app:iconStartPadding="5dp"
                        android:layout_margin="4dp"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/electronic_chip_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/electronics"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:chipBackgroundColor="@color/colorPrimary"
                        app:chipIcon="@drawable/electronic"
                        app:iconStartPadding="5dp"
                        android:layout_margin="4dp"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/clothing_chip_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clothing"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:chipBackgroundColor="@color/colorPrimary"
                        app:chipIcon="@drawable/clothing"
                        app:iconStartPadding="5dp"
                        android:layout_margin="4dp"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    
                    <com.google.android.material.chip.Chip
                        android:id="@+id/music_chip_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/music"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:chipBackgroundColor="@color/colorPrimary"
                        app:chipIcon="@drawable/music"
                        app:iconStartPadding="5dp"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/other_chip_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/other"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:chipBackgroundColor="@color/colorPrimary"
                        app:chipIcon="@drawable/file"
                        app:iconStartPadding="5dp" />

                </TableRow>

            </com.google.android.material.chip.ChipGroup>
            
            <Button
                android:id="@+id/add_gift"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add"
                android:textColor="@color/textWhite"
                android:textSize="15sp"
                android:background="@drawable/button_addgift"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>